[tool.poetry]
name = "admm-csnet"
version = "0.1.0"
description = ""
authors = ["Mohamad Jouni <mhmd.jouni@outlook.fr>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
numpy = "^1.23.1"
scipy = "^1.9.0"
pytest = "^7.1.2"
tensorboard = "^2.9.1"
tensorboardX = "^2.5.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
